# magpie-search

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  USAGE.md  glama.json  pyproject.toml  server.json
dev/: bakeoff.py  eval_locomo.py
installers/launchd/: com.magpi.indexer.plist
installers/systemd/: magpi-indexer.service  magpi-indexer.timer  magpi-trust.service  magpi-trust.timer
installers/taskscheduler/: install-magpi-indexer.ps1
src/magpie_search/: __init__.py  __main__.py  backfill.py  backup.py  cli.py  deepweb.py  embeddings.py  federation.py  indexer.py  mcp_server.py  nightly_sync.py  redactor.py  safe_subprocess.py  search.py  telemetry.py
src/magpie_search/llm/: __init__.py  audit.py  client.py  guardrails.py  reranker.py  summarizer.py  trust.py
src/magpie_search/providers/: __init__.py  base.py  files.py  kg.py  transcripts.py  vector.py  web.py  youtube.py
tests/: hardtest_glossary.md  hardtest_probe_smoke.py  test_backup_hardening.py  test_dedup.py  test_federation.py  test_grep.py  test_indexer_robustness.py  test_no_personal_leak.py  test_redactor.py  test_safe_subprocess.py  test_search_robustness.py  test_youtube_provider.py
tests/fixtures/: probe_smoke.jsonl
